// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ChangePw] screen renders without crashing 1`] = `<View />`;

exports[`[ChangePw] screen renders without crashing 2`] = `
<View
  onLayout={[Function]}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
      "paddingBottom": 0,
      "paddingLeft": 0,
      "paddingRight": 0,
      "paddingTop": 20,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "height": 52,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 20,
            },
          ]
        }
      >
        Change Password
      </Text>
      <TouchableOpacity
        activeOpacity={0.2}
        onPress={[Function]}
        style={
          Array [
            Object {
              "position": "absolute",
              "right": 10,
            },
          ]
        }
        testID="closeBtn"
      >
        <View
          style={
            Object {
              "padding": 8,
            }
          }
        >
          <Text />
        </View>
      </TouchableOpacity>
    </View>
    <View
      style={
        Array [
          Object {
            "flexBasis": 0,
            "flexGrow": 1,
            "flexShrink": 1,
            "paddingBottom": 15,
            "paddingLeft": 15,
            "paddingRight": 15,
            "paddingTop": 15,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "alignSelf": "stretch",
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <Text
          focused={false}
          style={
            Array [
              Object {
                "color": "#a3a3a3",
                "fontSize": 12,
                "marginBottom": 8,
              },
            ]
          }
        >
          Enter Current Password
        </Text>
        <View
          isFocused={false}
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderColor": "rgb(221,226,236)",
                "borderRadius": 3,
                "borderWidth": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "marginBottom": 8,
              },
            ]
          }
        >
          <TextInput
            allowFontScaling={true}
            autoCapitalize="none"
            autoCorrect={false}
            focused={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholderTextColor="rgb(175,194,219)"
            rejectResponderTermination={true}
            secureTextEntry={true}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "stretch",
                  "borderColor": "black",
                  "borderStyle": "solid",
                  "borderWidth": 0,
                  "color": "black",
                  "flexBasis": 0,
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontSize": 16,
                  "justifyContent": "flex-start",
                  "paddingBottom": 22,
                  "paddingLeft": 20,
                  "paddingRight": 20,
                  "paddingTop": 22,
                },
              ]
            }
            testID="currentPwTextInput"
            textContentType="none"
            underlineColorAndroid="transparent"
          />
        </View>
      </View>
    </View>
    <TouchableOpacity
      activeOpacity={0.5}
      disabled={false}
      height={60}
      onPress={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(58,139,255)",
            "borderColor": "white",
            "borderRadius": 4,
            "borderWidth": 1,
            "height": 60,
            "justifyContent": "center",
            "width": "auto",
          },
        ]
      }
      testID="checkCurrentPwBtn"
      white={false}
      width="auto"
    >
      <Text
        disabled={false}
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 14,
              "fontWeight": "bold",
            },
          ]
        }
        white={false}
      >
        Next
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`[ChangePw] screen snapshot check if modal open 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
        "paddingBottom": 0,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "height": 52,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "black",
                "fontSize": 20,
              },
            ]
          }
        >
          Change Password
        </Text>
        <TouchableOpacity
          activeOpacity={0.2}
          style={
            Array [
              Object {
                "position": "absolute",
                "right": 10,
              },
            ]
          }
          testID="closeBtn"
        >
          <View
            style={
              Object {
                "padding": 8,
              }
            }
          >
            <Text />
          </View>
        </TouchableOpacity>
      </View>
      <View
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "paddingBottom": 15,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 15,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "stretch",
                "flexDirection": "column",
                "justifyContent": "flex-start",
              },
            ]
          }
        >
          <Text
            focused={false}
            style={
              Array [
                Object {
                  "color": "#a3a3a3",
                  "fontSize": 12,
                  "marginBottom": 8,
                },
              ]
            }
          >
            Enter Current Password
          </Text>
          <View
            isFocused={false}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "rgb(221,226,236)",
                  "borderRadius": 3,
                  "borderWidth": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 8,
                },
              ]
            }
          >
            <TextInput
              allowFontScaling={true}
              autoCapitalize="none"
              autoCorrect={false}
              focused={false}
              placeholderTextColor="rgb(175,194,219)"
              rejectResponderTermination={true}
              secureTextEntry={true}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "alignSelf": "stretch",
                    "borderColor": "black",
                    "borderStyle": "solid",
                    "borderWidth": 0,
                    "color": "black",
                    "flexBasis": 0,
                    "flexDirection": "row",
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "fontSize": 16,
                    "justifyContent": "flex-start",
                    "paddingBottom": 22,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 22,
                  },
                ]
              }
              testID="currentPwTextInput"
              textContentType="none"
              underlineColorAndroid="transparent"
            />
          </View>
        </View>
      </View>
      <TouchableOpacity
        activeOpacity={0.5}
        disabled={false}
        height={60}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(58,139,255)",
              "borderColor": "white",
              "borderRadius": 4,
              "borderWidth": 1,
              "height": 60,
              "justifyContent": "center",
              "width": "auto",
            },
          ]
        }
        testID="checkCurrentPwBtn"
        white={false}
        width="auto"
      >
        <Text
          disabled={false}
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 14,
                "fontWeight": "bold",
              },
            ]
          }
          white={false}
        >
          Next
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;
